# SSVOpenHexagon

./: .clang-format  .gitignore  .gitmodules  2yqkvzuc.y32.txt  Assets.cpp  Assets.h  CMakeLists.txt  CMakeLists.txt.user.0000000  CMakeLists.txt.user.5e4d6ab  CMakeLists.txt.user.8bbbe49  CODEOWNERS  CPlayer.cpp  CPlayer.h  CWall.cpp  CWall.h  Config.cpp  Config.h  Factory.cpp  Factory.h  HGGraphics.cpp  HGProperties.cpp  HGScripting.cpp  HGStatus.h  HGUpdate.cpp  HSL.cpp  HSL.h  HexagonGame.cpp  HexagonGame.h  LICENSE  LevelData.cpp  LevelData.h  LevelSettings.cpp  LevelSettings.h  LuaContext.cpp  LuaContext.h  MESSAGE.html  Main.cpp  MenuGame.cpp  MenuGame.h  MusicData.cpp  (+32 more)
.github/: FUNDING.yml
.github/workflows/: ci.yml  ci_linux.yml  ci_osx.yml  ci_windows.yml
Compatibility/: Compatibility.cpp  Compatibility.h
Components/: CPlayer.cpp  CPlayer.h  CWall.cpp  CWall.h
Data/: EventData.cpp  EventData.h  LevelData.cpp  LevelData.h  MusicData.cpp  MusicData.h  PackData.cpp  PackData.h  ProfileData.cpp  ProfileData.h  ScriptData.cpp  ScriptData.h  StyleData.cpp  StyleData.h
DocsMarkdown/: MESSAGE.markdown  README.markdown  README_CONFIGOVERRIDES.markdown  README_EVENTS.markdown  README_LEVELS.markdown  README_MUSIC.markdown  README_ONLINE.markdown  README_SCRIPTING.markdown  README_SOUNDS.markdown  README_STYLES.markdown
Global/: Assets.cpp  Assets.h  Config.cpp  Config.h  Factory.cpp  Factory.h
Online/: Definitions.h  Online.cpp  Online.h  ThreadWrapper.h
Release/: config.json  log.txt  scores.json
Release/ConfigOverrides/: README_CONFIGOVERRIDES.txt  debug.json  fraps.json  fullscreen.json  highfps.json  noaudio.json  nocosmeticscript.json  noscript.json  windowed.json
Release/Events/: continuous_rotation.json
Release/Levels/: README_SCRIPTING.html  README_SCRIPTING.txt  commando.json  easy.json  extra.json  goldenratio.json  hard.json  labyrinth.json  lunatic.json  mazeoflove.json  normal.json  tutorial.json  tutorial2.json  zen.json
Release/LuaScripts/: common.lua  commonpatterns.lua  test2.lua  utils.lua
Release/Music/: README_MUSIC.html  README_MUSIC.txt  captainCool.json  commandoSteve.json  drFinkelfracken.json  jackRussel.json  mazeOfMayonnaise.json  milkyWays.json  starshipShowdown.json  steampunkWarlord.json
Release/Profiles/: default.json  player.json  test.json  vee.json
Release/Scripts/: alternativepatterns.lua  common.lua  commonpatterns.lua  patternizer.lua  patternizerpatterns.lua  test.json  utils.lua
Release/Sounds/: README_SOUNDS.html  README_SOUNDS.txt  sounds.json
Release/Styles/: README_STYLES.html  README_STYLES.txt  danger.json  dark.json  goldenratio.json  gray.json  light.json  mayhem.json  strawberry.json  toxic.json  tutorial.json  tutorial2.json  wordless.json  wordlessinverse.json  zen.json  zen2.json  zen3.json
Release/_DOCUMENTATION/: README.html  README_CONFIGOVERRIDES.html  README_EVENTS.html  README_LEVELS.html  (+4 more)
Utils/: Base64.cpp  Base64.h  FPSWatcher.cpp  FPSWatcher.h  HSL.cpp  HSL.h  MD5.cpp  MD5.h  ObfuscatedValue.h  ThreadWrapper.h  Utils.cpp  Utils.h
_RELEASE/: SSVOpenHexagon.cbp  backup_db.sh  config.json  debug.bat  debugldd.txt  default_config.json  fraps.bat  fullscreen.bat  fullscreen_no3D.bat  highfps.bat  imgui.ini  libsteam_api.dylib  log.txt  luadocs.md  noaudio.bat  nocosmeticscript.bat  ohdb.sqlite  openhexagon  run_ssvopenhexagon_linux.sh  scores.json  steam_api64.lib  steam_appid.txt  users.json  windowed.bat  windowed_no3D.bat
art/: Untitled-1.psd  achievement_base.psd  bottomBar.psd  creditsBar1.psd  creditsBar2.psd  creditsBar2Full.psd  epilepsyWarning.psd  eventcover.psd  eventheader.psd  hard_achiev.psd  icon.psd  icon.rc  icon.res  icon256.rc  icon256.res  icon256console.rc  icon256console.res  keyarrow.psd  libraryhero.psd  librarylogo.psd  majorupdate.psd  replayicon.psd  steam_store_page_lines.psd  webpagelogo.psd  workshop_header.psd
buildlx/: c.sh  c_server.sh  car.sh  car_debug.sh  car_server.sh  car_valgrind.sh  cmake_clang.sh  cmake_clang_asan_release.sh  cmake_clang_msan.sh  cmake_clang_msan_release.sh  cmake_clang_ubsan.sh  cmake_clang_ubsan_release.sh  cmake_gcc.sh  cmake_gcc_release.sh  cpsyslibs.sh  make_debug_client_linux_clang.sh  make_debug_client_linux_clang_0_cmake.sh  make_debug_client_linux_clang_2_copy.sh  make_debug_client_linux_gcc_0_cmake.sh  make_debug_server_vbox.sh  make_debug_server_vbox_0_cmake.sh  make_debug_server_vbox_1_build.sh  make_release_client_vbox.sh  make_release_client_vbox_0_cmake.sh  make_release_client_vbox_2_copy.sh  make_release_server_vbox.sh  make_release_server_vbox_0_cmake.sh  make_release_server_vbox_2_copy.sh  r.sh  repro.sh
buildrel/: c.sh  car.sh  car_notest.sh  clangformat_everthing.sh  cmake_msys2_debug_gcc.sh  cmake_msys2_release_gcc.sh  cmake_msys2_timetrace.sh  copylibs.sh  make_release_client_win10_msys.sh  make_release_client_win10_msys_0_cmake.sh  make_release_client_win10_msys_1_build.sh  make_release_client_win10_msys_2_copy.sh  make_timetrace_release_client_win10_msys_0_cmake.sh  r.sh
cmake/: FindJsonCpp.cmake  FindLUA.cmake  FindSFML.cmake  FindSSVEntitySystem.cmake  FindSSVLuaWrapper.cmake  FindSSVMenuSystem.cmake  FindSSVStart.cmake  FindSSVUtils.cmake  FindSSVUtilsJson.cmake  FindSparsehash.cmake  FindZLib.cmake
misc/: changelog_205.md  default_config.json  generated_lua_docs.md  pulseHelper.html  richpresence.txt
old/: Compression.cpp  Compression.hpp  SparseIntegerSet.hpp  WallUtils.hpp  changelog_204.md  changelog_204_pre.md  cut_cw_stuff.cpp  default_config.json  ffast_math_issue.md  hardcodedQueries.cpp  steam_description.txt
old_scripts/: build-repository-oh.sh
server/: openhexagon-server.service  update_server.sh
test/: CMakeLists.txt  FixedFunction.t.cpp  Replay.t.cpp  ReplayExecution.t.cpp  ReplayExecutionBenchmark.t.cpp  SparseIntegerSet.t.cpp  TestUtils.hpp  ThreadPool_Pool.t.cpp  Utils_BuildPackId.t.cpp  Utils_SparseIntegerSet.t.cpp  Utils_Split.t.cpp
vbox/: build_and_upload_server.sh
webpage/: github-pandoc.css  index.html  mk_workshop_tutorial.sh  workshop.html  workshop_tutorial.md
(+632 files in other folders)
